--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
